# petsite-load-test

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-and-deploy.sh  build-ecr.sh
src/: load_tester.rs  main.rs  ssm_discovery.rs  types.rs
