[package]
name = "microservice-load-tester"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "load-tester"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
aws-sdk-ssm = "1.0"
aws-config = "1.0"
colored = "2.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
futures = "0.3"
rand = "0.8"